# entity_disambiguator-py

./: README.md  pyproject.toml
src/entity_disambiguator_py/: __init__.py  awscurl.py  client.py  model.py  typing.py
tests/: test_client.py
tests/test_payloads/: concept_post.json  ontology_back_post.json  ontology_for_post.json  subgraph_query.json  test_request.json  type_definition_post.json
