[project]
name = "entity-disambiguator-py"
version = "0.8.6"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Michael Samsom", email = "mike.samsom@asica.ca" }]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.6",
    "pydantic>=2.11.7",
    "requests>=2.32.3",
    "requests-aws4auth>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "python-dotenv>=1.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
